--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
+    "@prisma/client": "^3.6.0",
     "core-js": "^3.6.5",
     "express": "4.17.1",
     "react": "17.0.2",
@@ -50,8 +51,12 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
+    "prisma": "^3.6.0",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "typescript": "~4.4.3"
+  },
+  "prisma": {
+    "schema": "libs/prisma-client/prisma/schema.prisma"
   }
 }
