Setup basic frameworks & workflow

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:/tmp/whnet/whnet.db"
+DATABASE_URL="file:/path.to.sqlite.database/dbname.db"
+PORT=3333
+NX_BACKEND_URI="http://localhost:3333"
+NX_GRAPHQL_ENDPOINT_URI="http://localhost:3333/graphql"
+NO_PEER_DEPENDENCY_CHECK="true"
