--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -2,8 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["node", "express"]
+    "types": ["node", "express"],
+    "target": "esnext",
+    "module": "esnext"
   },
   "exclude": ["**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
