--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
+    "start-full": "nx run-many --target=serve --all --parallel",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "demo-db": "ts-node --project ./tsconfig.base.json --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only libs/prisma-client/prisma/demo-db.ts",
+    "generate-gql": "nx affected --target=generate-gql"
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
     "@prisma/client": "^3.6.0",
+    "apollo-server-express": "^3.5.0",
     "core-js": "^3.6.5",
+    "cross-fetch": "^3.1.4",
+    "encoding": "^0.1.13",
     "express": "4.17.1",
+    "graphql": "15.8.0",
+    "nexus": "^1.1.0",
+    "nexus-prisma": "^0.35.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
@@ -21,6 +31,9 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.3.0",
+    "@graphql-codegen/cli": "^2.3.0",
+    "@graphql-codegen/typescript-operations": "^2.2.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.2",
     "@nrwl/cli": "13.3.9",
     "@nrwl/cypress": "13.3.9",
     "@nrwl/eslint-plugin-nx": "13.3.9",
@@ -39,22 +52,26 @@
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "~5.3.0",
-    "@typescript-eslint/parser": "~5.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "babel-jest": "27.2.3",
     "cypress": "^9.1.0",
     "eslint": "8.2.0",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
     "prisma": "^3.6.0",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
-    "typescript": "~4.4.3"
+    "ts-node": "^10.4.0",
+    "typescript": "4.4.4"
   },
   "prisma": {
     "schema": "libs/prisma-client/prisma/schema.prisma"
