--- a/package.json
+++ b/package.json
@@ -15,19 +15,25 @@
     "@apollo/client": "^3.5.6",
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
-    "@prisma/client": "^3.6.0",
+    "@prisma/client": "^3.7.0",
+    "@types/graphql-fields": "^1.3.4",
     "apollo-server-express": "^3.5.0",
+    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "cross-fetch": "^3.1.4",
     "encoding": "^0.1.13",
     "express": "4.17.1",
     "graphql": "15.8.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.14.1",
     "nexus": "^1.1.0",
     "nexus-prisma": "^0.35.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.3.0",
@@ -67,10 +73,11 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
-    "prisma": "^3.6.0",
+    "prisma": "^3.7.0",
     "react-test-renderer": "17.0.2",
     "ts-jest": "27.0.5",
     "ts-node": "^10.4.0",
+    "typegraphql-prisma": "^0.18.3",
     "typescript": "4.4.4"
   },
   "prisma": {
