--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@emotion/styled": "11.3.0",
     "@prisma/client": "^3.7.0",
     "@types/graphql-fields": "^1.3.4",
+    "apollo-server-errors": "^3.3.0",
     "apollo-server-express": "^3.5.0",
+    "argon2": "^0.28.3",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "cross-fetch": "^3.1.4",
     "encoding": "^0.1.13",
     "express": "4.17.1",
+    "express-jwt": "^6.1.0",
     "graphql": "15.8.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.14.1",
+    "jsonwebtoken": "^8.5.1",
     "nexus": "^1.1.0",
     "nexus-prisma": "^0.35.0",
     "react": "17.0.2",
@@ -55,6 +59,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
@@ -65,6 +70,7 @@
     "eslint": "8.2.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.25.3",
