--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express-jwt": "^6.1.0",
     "graphql": "15.8.0",
     "graphql-fields": "^2.0.3",
+    "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.14.1",
+    "graphql-shield": "^7.5.0",
     "jsonwebtoken": "^8.5.1",
     "nexus": "^1.1.0",
     "nexus-prisma": "^0.35.0",
