--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-full": "nx run-many --target=serve --all --parallel",
     "build": "nx build",
     "test": "nx test",
-    "demo-db": "ts-node --project ./tsconfig.base.json --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only libs/prisma-client/prisma/demo-db.ts",
+    "seed": "ts-node --project ./tsconfig.base.json --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only libs/prisma-client/prisma/seed.ts",
     "generate-gql": "nx affected --target=generate-gql"
   },
   "private": true,
