--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@apollo/client": "^3.5.6",
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
+    "@hookform/resolvers": "^2.8.5",
+    "@mui/material": "^5.2.7",
     "@prisma/client": "^3.7.0",
     "@types/graphql-fields": "^1.3.4",
     "apollo-server-errors": "^3.3.0",
@@ -36,10 +38,12 @@
     "nexus-prisma": "^0.35.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.22.5",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.3.0",
