--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,13 +42,22 @@
         "import/no-named-as-default": "off",
         "dot-notation": "off",
         "@typescript-eslint/dot-notation": "off",
-        "import/no-unresolved": "off"
+        "import/no-unresolved": "off",
+        "@typescript-eslint/no-unused-vars": "warn"
       }
     },
     {
       "files": ["*.js", "*.jsx"],
       "extends": [],
       "rules": {}
+    },
+    {
+      "files": ["*.spec.ts", "*.spec.tsx"],
+      "extends": [],
+      "rules": {
+        "import/no-extraneous-dependencies": "off"
+      }
     }
+
   ]
 }
