--- a/package.json
+++ b/package.json
@@ -12,84 +12,91 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.5.6",
-    "@emotion/react": "11.5.0",
-    "@emotion/styled": "11.3.0",
-    "@hookform/resolvers": "^2.8.5",
-    "@mui/material": "^5.2.7",
-    "@prisma/client": "^3.7.0",
+    "@apollo/client": "^3.5.8",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.8",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/lab": "^5.0.0-alpha.66",
+    "@mui/material": "^5.3.1",
+    "@prisma/client": "^3.8.1",
     "@types/graphql-fields": "^1.3.4",
-    "apollo-server-errors": "^3.3.0",
-    "apollo-server-express": "^3.5.0",
+    "apollo-server-errors": "^3.3.1",
+    "apollo-server-express": "^3.6.2",
     "argon2": "^0.28.3",
     "class-validator": "^0.13.2",
-    "core-js": "^3.6.5",
-    "cross-fetch": "^3.1.4",
+    "core-js": "^3.20.3",
+    "cross-fetch": "^3.1.5",
     "encoding": "^0.1.13",
-    "express": "4.17.1",
+    "express": "4.17.2",
     "express-jwt": "^6.1.0",
     "graphql": "15.8.0",
     "graphql-fields": "^2.0.3",
     "graphql-middleware": "6.0.9",
     "graphql-scalars": "^1.14.1",
     "graphql-shield": "^7.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "nexus": "^1.1.0",
-    "nexus-prisma": "^0.35.0",
+    "jwt-decode": "^3.1.2",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.22.5",
+    "react-hook-form": "^7.25.1",
+    "react-router-dom": "^6.2.1",
+    "react-transition-group": "^4.4.2",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.7",
+    "regenerator-runtime": "0.13.9",
+    "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.0.0",
     "type-graphql": "^1.1.1",
+    "usehooks-ts": "^2.2.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "11.3.0",
+    "@emotion/babel-plugin": "11.7.2",
     "@graphql-codegen/cli": "^2.3.0",
-    "@graphql-codegen/typescript-operations": "^2.2.1",
-    "@graphql-codegen/typescript-react-apollo": "^3.2.2",
-    "@nrwl/cli": "13.3.9",
-    "@nrwl/cypress": "13.3.9",
-    "@nrwl/eslint-plugin-nx": "13.3.9",
-    "@nrwl/express": "13.3.9",
-    "@nrwl/jest": "13.3.9",
-    "@nrwl/linter": "13.3.9",
-    "@nrwl/node": "13.3.9",
-    "@nrwl/react": "13.3.9",
-    "@nrwl/tao": "13.3.9",
-    "@nrwl/web": "13.3.9",
-    "@nrwl/workspace": "13.3.9",
-    "@testing-library/react": "12.1.2",
+    "@graphql-codegen/typescript-operations": "^2.2.2",
+    "@graphql-codegen/typescript-react-apollo": "^3.2.4",
+    "@nrwl/cli": "13.6.1",
+    "@nrwl/cypress": "13.6.1",
+    "@nrwl/eslint-plugin-nx": "13.6.1",
+    "@nrwl/express": "13.6.1",
+    "@nrwl/jest": "13.6.1",
+    "@nrwl/linter": "13.6.1",
+    "@nrwl/node": "13.6.1",
+    "@nrwl/react": "13.6.1",
+    "@nrwl/tao": "13.6.1",
+    "@nrwl/web": "13.6.1",
+    "@nrwl/workspace": "13.6.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "7.0.2",
-    "@types/express": "4.17.0",
-    "@types/jest": "27.0.2",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/node": "14.14.33",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "babel-jest": "27.2.3",
-    "cypress": "^9.1.0",
-    "eslint": "8.2.0",
-    "eslint-config-airbnb": "^19.0.2",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.4.0",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "17.0.13",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "babel-jest": "27.4.6",
+    "cypress": "^9.3.1",
+    "eslint": "8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "27.2.3",
+    "jest": "27.4.7",
     "prettier": "^2.3.1",
-    "prisma": "^3.7.0",
+    "prisma": "^3.8.1",
     "react-test-renderer": "17.0.2",
-    "ts-jest": "27.0.5",
+    "ts-jest": "27.1.3",
     "ts-node": "^10.4.0",
-    "typegraphql-prisma": "^0.18.3",
+    "typegraphql-prisma": "^0.18.4",
     "typescript": "4.4.4"
   },
   "prisma": {
