--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "luxon": "^2.3.0",
     "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -73,6 +74,7 @@
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/luxon": "^2.0.9",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
