--- a/libs/context/project.json
+++ b/libs/context/project.json
@@ -7,7 +7,7 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/context/**/*.ts"]
+        "lintFilePatterns": ["libs/context/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
