--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
         "dot-notation": "off",
         "@typescript-eslint/dot-notation": "off",
         "import/no-unresolved": "off",
+        "react/jsx-props-no-spreading": "off",
         "@typescript-eslint/no-unused-vars": "warn"
       }
     },
