--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -6,6 +6,7 @@
     "build": {
       "executor": "@nrwl/node:build",
       "outputs": ["{options.outputPath}"],
+      "defaultConfiguration": "production",
       "options": {
         "outputPath": "dist/apps/api",
         "main": "apps/api/src/main.ts",
