Update (nx.json): run generate-gql in sequence

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,12 @@
         "target": "build",
         "projects": "dependencies"
       }
+    ],
+    "generate-gql": [
+      {
+        "target": "generate-gql",
+        "projects": "dependencies"
+      }
     ]
   },
   "generators": {
