--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node dist/apps/api/main.js",
     "dev-full": "nx run-many --target=serve --all --parallel",
     "dev": "nx serve",
-    "build": "yarn nx run-many --target=generate-gql --all --parallel=1 && yarn nx build api && yarn nx build whnet",
+    "build": "yarn generate-gql && yarn nx build api && yarn nx build whnet",
     "test": "nx test",
     "seed": "ts-node --project ./tsconfig.base.json --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only libs/prisma-client/prisma/seed.ts",
     "generate-gql": "nx affected --target=generate-gql"
@@ -20,7 +20,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
-    "@prisma/client": "^3.8.1",
+    "@prisma/client": "~3.9.2",
     "@types/graphql-fields": "^1.3.4",
     "apollo-server-errors": "^3.3.1",
     "apollo-server-express": "^3.6.2",
@@ -29,7 +29,7 @@
     "core-js": "^3.20.3",
     "cross-fetch": "^3.1.5",
     "encoding": "^0.1.13",
-    "express": "4.17.2",
+    "express": "^4.17.2",
     "express-jwt": "^6.1.0",
     "graphql": "15.8.0",
     "graphql-fields": "^2.0.3",
@@ -41,13 +41,14 @@
     "jwt-decode": "^3.1.2",
     "luxon": "^2.3.0",
     "notistack": "^2.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "prisma": "~3.9.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.1",
     "react-router-dom": "^6.2.1",
     "react-transition-group": "^4.4.2",
     "reflect-metadata": "^0.1.13",
-    "regenerator-runtime": "0.13.9",
+    "regenerator-runtime": "^0.13.9",
     "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.0.0",
     "type-graphql": "^1.1.1",
@@ -55,7 +56,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "11.7.2",
+    "@emotion/babel-plugin": "^11.7.2",
     "@graphql-codegen/cli": "^2.3.0",
     "@graphql-codegen/typescript-operations": "^2.2.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.4",
@@ -71,32 +72,31 @@
     "@nrwl/web": "13.6.1",
     "@nrwl/workspace": "13.6.1",
     "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/luxon": "^2.0.9",
-    "@types/node": "17.0.13",
-    "@types/react": "17.0.38",
-    "@types/react-dom": "17.0.11",
+    "@types/node": "^17.0.13",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
-    "babel-jest": "27.4.6",
+    "babel-jest": "^27.4.6",
     "cypress": "^9.3.1",
-    "eslint": "8.7.0",
+    "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "27.4.7",
+    "jest": "^27.4.7",
     "prettier": "^2.3.1",
-    "prisma": "3.8.1",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "^17.0.2",
     "ts-jest": "27.1.3",
     "ts-node": "^10.4.0",
     "typegraphql-prisma": "^0.18.4",
