Chore(scripts): dev run on private network

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/apps/api/main.js",
     "dev-full": "nx run-many --target=serve --all --parallel",
-    "dev": "nx serve",
+    "dev": "nx serve --host=0.0.0.0",
     "build": "yarn generate-gql && yarn nx build api && yarn nx build whnet",
     "test": "nx test",
     "seed": "ts-node --project ./tsconfig.base.json --compiler-options '{\"module\":\"CommonJS\"}' --transpile-only libs/prisma-client/prisma/seed.ts",
